# agentatlas

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  backfill_fingerprints.py  compare_benchmark_runs.py  fly.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  run_revalidation_cycle.py  test_api.py  test_execute.py  test_recovery.py  test_registry.py  test_sdk_client.py
.github/workflows/: benchmark.yml  deploy.yml  test.yml
agentatlas/: __init__.py  api.py  atlas.py  browser_runtime.py  client.py  executor.py  models.py  registry.py  registry_benchmarks.py  registry_common.py  registry_quality.py  registry_review.py  supabase_client.py  versioning.py
agentatlas/ui/: admin.py
agentatlas/ui/static/: admin.css  admin.js
benchmarks/: RESULTS.md  latest.json
deploy/: ecs-task-definition.json  render-setup.md
examples/: extract_hn_posts.py  extract_job_listings.py  extract_job_listings_hosted_api.py  extract_lever_jobs.py  extract_product_cards.py  extract_wikipedia.py  hosted_api_warm_start.py  job_board_warm_start.py
supabase/: setup.sql
supabase/migrations/: 20260307_create_benchmark_runs.sql  20260307_create_review_events.sql  20260307_create_validation_runs.sql
