[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentatlas"
version = "0.4.1"
description = "Shared browser interaction schema registry for AI agents. Reduces LLM token usage by 80-100% on known sites."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "browser-automation", "llm", "playwright", "token-optimization", "web-scraping", "schema-registry"]
authors = [
    {name = "Bhanu Prasad Thota", email = "thotabhanuprasad2708@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "supabase>=2.6.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.44.0",
    "openai>=1.109.1",
    "playwright-stealth>=1.0.6",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/bhanuprasadthota/agentatlas"
Repository = "https://github.com/bhanuprasadthota/agentatlas"
Issues = "https://github.com/bhanuprasadthota/agentatlas/issues"
Changelog = "https://github.com/bhanuprasadthota/agentatlas/blob/main/CHANGELOG.md"
"Benchmark Results" = "https://github.com/bhanuprasadthota/agentatlas/blob/main/benchmarks/RESULTS.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentatlas*"]

[tool.setuptools.package-data]
"agentatlas.ui" = ["static/*.css", "static/*.js"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["."]
